force-app/main/default/objects/Payment__c/fields/TransactioniD__c.field-meta.xml
<CustomField>
    <fullName>TransactioniD__c</fullName>
    <label>TransactionID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>